[package]
name = "cmdtree"
version = "0.7.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
description = "(Rust) commands tree"
license = "MIT"
homepage = "https://github.com/kurtlawrence/cmdtree"
repository = "https://github.com/kurtlawrence/cmdtree"
documentation = "https://docs.rs/cmdtree/"
readme = "README.md"
keywords = [ "cli", "command", "tree" ]
edition = "2018"

[badges]
travis-ci = { repository = "kurtlawrence/cmdtree" }

[dependencies]
colored = "1.8"
linefeed = "0.6"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benches"
harness = false