[package]
name = "cmdtree"
version = "0.10.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
description = "(Rust) commands tree"
license = "MIT"
homepage = "https://github.com/kurtlawrence/cmdtree"
repository = "https://github.com/kurtlawrence/cmdtree"
documentation = "https://docs.rs/cmdtree/"
readme = "README.md"
keywords = [ "cli", "command", "tree" ]
edition = "2018"

[badges]
travis-ci = { repository = "kurtlawrence/cmdtree" }
codecov =   { repository = "kurtlawrence/cmdtree" }

[dependencies]
colored = 	{ version = "1.8",  default-features = false }
linefeed = 	{ version = "0.6",  default-features = false,	optional = true }

[dev-dependencies]
criterion =	{ version = "0.3" }

[[bench]]
name = "benches"
harness = false

[features]
default = [ "runnable" ]
runnable = [ "linefeed" ]
